# tensorflow-lite-sys

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: bindings.rs  lib.rs
tests/: verify.rs
